--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Descubra as Plantas Flutuantes!</title>
+<link rel="icon" type="image/png+xml" href="plantar.png">
 <style>
 :root{
   --bg:#cfeef5;
